--- a/chat.html
+++ b/chat.html
@@ -81,7 +81,7 @@ main.container{flex:1 1 auto;display:flex;flex-direction:column;overflow:hidden}
 }
 .section-body{flex:1;display:flex;flex-direction:column;overflow:auto}
 .section-chats{flex:1;overflow:auto}
-.section-contacts{flex:1;overflow:auto}
+.section-contacts{flex:1;overflow: auto;}
 .chats-list{flex:1;overflow:auto}
 .chat-item{
   padding:10px;
@@ -124,7 +124,11 @@ input[type="text"], textarea{
   color:#fff;
   padding:8px 10px;
   border-radius:8px;
-  cursor:pointer
+  cursor:pointer;
+  margin-top: 4px;
+  margin-bottom: 4px;
+  margin-left: 4px; 
+  margin-right: 4px
 }
 .btn.ghost {
   background:transparent;
@@ -152,6 +156,10 @@ input[type="text"], textarea{
   display: block;
   width: calc(100% - 12px);  /* deja un pequeño margen con los bordes */
   box-sizing: border-box;
+  margin-top: 4px;
+  margin-bottom: 4px;
+  margin-left: 4px; 
+  margin-right: 4px
 }
 .sidebar-card .btn {
   font-size: 13px;
