--- a/chat.html
+++ b/chat.html
@@ -182,6 +182,7 @@ input[type="text"], textarea{
 <header>
   <h1><img id="logo" src="logo.jpg" alt="Logo"> Chat Privado</h1>
   <div style="display:flex;gap:8px">
+    <button onclick="location.href='https://www.youtube.com/@hablahistoria?sub_confirmation=1'" class="btn">Youtube</button>
     <button id="btnIndex" class="btn ghost">Inicio</button>
     <button id="btnLogout" class="btn ghost">Cerrar sesión</button>
   </div>
@@ -517,3 +518,4 @@ onAuthStateChanged(auth, async (user)=>{
 </script>
 </body>
 </html>
+
