--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 <header>
   <h1> <img src="logo.jpg"> Habla Historia</h1>
   <div class="actions">
+    <button onclick="location.href='https://www.youtube.com/@hablahistoria?sub_confirmation=1'" class="btn">Youtube</button>
     <button onclick="location.href='chat.html'" class="btn">Chats</button>
     <button class="btn" id="btnLogout">Cerrar sesión</button>
   </div>
@@ -550,6 +551,7 @@
 </script>
 </body>
 </html>
+
 
 
 
