--- a/chat.html
+++ b/chat.html
@@ -123,8 +123,11 @@ input[type="text"], textarea{
   border:none;
   color:#fff;
   padding:8px 10px;
-  border-radius:8px;
+  border-radius:100%;
   cursor:pointer;
+  margin-right: 4px;
+  margin-top: 4px;
+  margin-bottom: 4px;
 }
 .btn.ghost {
   background:transparent;
