--- a/chat.html
+++ b/chat.html
@@ -123,7 +123,7 @@ input[type="text"], textarea{
   border:none;
   color:#fff;
   padding:8px 10px;
-  border-radius:100%;
+  border-radius:8px;
   cursor:pointer;
   margin-right: 4px;
   margin-top: 4px;
@@ -576,3 +576,4 @@ onAuthStateChanged(auth, async (user)=>{
 </script>
 </body>
 </html>
+
