--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 </head>
 <body>
 <header>
-  <h1> <img src="logo.jpg"> Habla Historia W</h1>
+  <h1> <img src="logo.jpg"> Habla Historia</h1>
   <div class="actions">
     <button onclick="location.href='https://www.youtube.com/@hablahistoria?sub_confirmation=1'" class="btn">Youtube</button>
     <button onclick="location.href='chat.html'" class="btn">Chats</button>
@@ -551,6 +551,7 @@
 </script>
 </body>
 </html>
+
 
 
 
