--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
+  <meta name="google-adsense-account" content="ca-pub-9925435155682261">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Blog • HablaHistoria</title>
   <link rel="icon" href="logo.jpg" type="image/x-icon">
@@ -551,6 +552,7 @@
 </script>
 </body>
 </html>
+
 
 
 
