--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="google-adsense-account" content="ca-pub-9925435155682261">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9925435155682261"
+     crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Blog • HablaHistoria</title>
   <link rel="icon" href="logo.jpg" type="image/x-icon">
@@ -573,6 +574,7 @@
 </script>
 </body>
 </html>
+
 
 
 
