--- a/login.html
+++ b/login.html
@@ -15,6 +15,15 @@
     justify-content:center;
     align-items:center;
     min-height:100vh;
+    flex-direction: column;
+  }
+  .logo {
+    text-align:center;
+    margin-bottom:20px;
+  }
+  .logo img {
+    width:300px;
+    height:auto;
   }
   .card {
     background: #fffaf0;
@@ -71,6 +80,10 @@
 </style>
 </head>
 <body>
+
+<div class="logo">
+  <img src="hug.svg" alt="Hug-oh Logo">
+</div>
 
 <div class="card">
   <!-- LOGIN -->
