--- a/chat.html
+++ b/chat.html
@@ -21,6 +21,14 @@ body{
   flex-direction:column;
   overflow:hidden
 }
+.logo {
+  text-align:center;
+}
+.logo img {
+  width:150px;
+  height:auto;
+  opacity: 85%;
+}
 header{
   flex:0 0 auto;
   display:flex;
@@ -197,6 +205,9 @@ input[type="text"], textarea{
 <body>
 <header>
   <h1><img id="logo" src="logo.jpg" alt="Logo"> Chat Privado</h1>
+  <div class="logo">
+  <img src="hugw.svg" alt="Hug-oh Logo">
+  </div>
   <div style="display:flex;gap:8px">
     <button onclick="location.href='https://www.youtube.com/@hablahistoria?sub_confirmation=1'" class="btn">Youtube</button>
     <button id="btnIndex" class="btn ghost">Inicio</button>
@@ -589,5 +600,4 @@ onAuthStateChanged(auth, async (user)=>{
 </script>
 </body>
 </html>
-
 
