--- a/chat.html
+++ b/chat.html
@@ -28,22 +28,23 @@ body{
   width:150px;
   height:auto;
   opacity: 85%;
+  margin-left: 20px;
+  margin-right: 20px;
 }
-header{
-  flex:0 0 auto;
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  padding:12px 16px;
-  background:var(--primary);
-  color:#fff
+header {
+  display:flex; justify-content:space-between; align-items:center;
+  padding:14px 16px; background:#ff9f1c; color:#fff;
+  border-bottom:2px solid #e67e00; position:sticky; top:0; z-index:10
 }
-header h1{
-  margin:0;
-  font-size:20px;
-  display:flex;
-  gap:8px;
-  align-items:center
+header h1 { 
+  font-size:28px; margin:0; color:#fff; 
+  display:flex; align-items:center; gap:5px;
+}
+header h1 img {
+  width:38px;
+  height:38px;
+  border-radius:50%;
+  object-fit:cover;
 }
 #logo{height:40px;width:auto;border-radius:100%}
 main.container{flex:1 1 auto;display:flex;flex-direction:column;overflow:hidden}
@@ -164,6 +165,13 @@ input[type="text"], textarea{
   .card.chat-panel.active{
     display:flex; /* cuando se activa un chat */
     flex-direction:column;
+  }
+  .logo {
+    text-align:center;
+  }
+  .logo img {
+    width:100px;
+    height:auto;
   }
 }
 
