--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     width:150px;
     height:auto;
     opacity: 85%;
+    margin-left: 20px;
+    margin-right: 20px;
     }
     header {
       display:flex; justify-content:space-between; align-items:center;
@@ -56,7 +58,14 @@
     }
     textarea { min-height:110px; resize:vertical }
     .grid { display:grid; gap:12px }
-    @media(min-width:720px) { .grid.cols-2 { grid-template-columns:1fr 1fr } }
+    @media(min-width:860px) { .grid.cols-2 { grid-template-columns:1fr 1fr }
+    .logo {
+      text-align:center;
+    }
+    .logo img {
+      width:150px;
+      height:auto;
+    } }
     .post {
       background:#fff; border:1px solid var(--border);
       border-radius:12px; padding:14px; transition:all 0.3s ease-in-out;
@@ -127,6 +136,7 @@
     .uploads { display:grid; gap:8px; margin-top:8px }
     .upload-item { font-size:14px; background:#fffef8; border:1px solid var(--border); border-radius:8px; padding:8px }
     progress { width:100%; height:10px }
+    
   </style>
 </head>
 <body>
@@ -585,14 +595,3 @@
 </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
