--- a/login.html
+++ b/login.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
+<meta name="google-adsense-account" content="ca-pub-9925435155682261">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Acceso • HablaHistoria</title>
 <link rel="icon" href="logo.jpg" type="image/x-icon">
@@ -257,3 +258,4 @@ document.getElementById('btnRegister').addEventListener('click', async ()=>{
 </script>
 </body>
 </html>
+
