--- a/chat.html
+++ b/chat.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="google-adsense-account" content="ca-pub-9925435155682261">
   <title>Chat Privado • HablaHistoria</title>
   <link rel="icon" href="logo.jpg" type="image/x-icon">
   <style>
@@ -608,4 +609,5 @@ onAuthStateChanged(auth, async (user)=>{
 </script>
 </body>
 </html>
+
 
