--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     text-align:center;
     }
     .logo img {
-    width:50px;
+    width:100px;
     height:auto;
     opacity: 85%;
     margin-left: 20px;
@@ -64,7 +64,7 @@
       text-align:center;
     }
     .logo img {
-      width:50px;
+      width:100px;
       height:auto;
     } }
     .post {
@@ -144,7 +144,7 @@
 <header>
   <h1> <img src="logo.jpg"> Habla Historia</h1>
   <div class="logo">
-  <img src="hugw.svg" alt="Hug-oh Logo">
+  <img src="m.svg" alt="Hug-oh Logo">
   </div>
   <div class="actions">
     <button onclick="location.href='https://www.youtube.com/@hablahistoria?sub_confirmation=1'" class="btn">Youtube</button>
@@ -596,5 +596,6 @@
 </script>
 </body>
 </html>
+
 
 
