--- a/index.html
+++ b/index.html
@@ -22,12 +22,25 @@
     text-align:center;
     }
     .logo img {
-    width:50px;
+    width:40px;
     height:auto;
     opacity: 85%;
     margin-left: 20px;
     margin-right: 20px;
     }
+.btn.icon, 
+.btn.ghost.icon {
+  border: none !important;     
+  background: transparent !important; /* sin fondo */
+  color: #fff !important;             /* fuerza blanco */
+  box-shadow: none !important;
+}
+
+.btn.icon svg {
+  width: 22px;
+  height: 22px;
+  fill: #fff !important; /* SVG blanco sólido */
+}
     header {
       display:flex; justify-content:space-between; align-items:center;
       padding:14px 16px; background:#ff9f1c; color:#fff;
@@ -64,7 +77,7 @@
       text-align:center;
     }
     .logo img {
-      width:50px;
+      width:40px;
       height:auto;
     } }
     .post {
@@ -144,13 +157,39 @@
 <header>
   <h1> <img src="logo.jpg"> Habla Historia</h1>
   <div class="logo">
-  <img src="m.svg" alt="Hug-oh Logo">
+  <img src="svg/m.svg" alt="Hug-oh Logo">
   </div>
-  <div class="actions">
-    <button onclick="location.href='https://www.youtube.com/@hablahistoria?sub_confirmation=1'" class="btn">Youtube</button>
-    <button onclick="location.href='chat.html'" class="btn">Chats</button>
-    <button class="btn" id="btnLogout">Cerrar sesión</button>
-  </div>
+<div style="display:flex;gap:8px">
+  <!-- YouTube -->
+  <button
+    onclick="location.href='https://www.youtube.com/@hablahistoria?sub_confirmation=1'"
+    class="btn icon"
+    title="YouTube"
+    aria-label="YouTube"
+  >
+    <!-- ícono YouTube -->
+    <svg viewBox="0 0 24 24" aria-hidden="true">
+      <path d="M23.5 6.2a4 4 0 0 0-2.8-2.8C18.7 3 12 3 12 3s-6.7 0-8.7.4A4 4 0 0 0 .5 6.2 41 41 0 0 0 0 12a41 41 0 0 0 .5 5.8 4 4 0 0 0 2.8 2.8C5.3 21 12 21 12 21s6.7 0 8.7-.4a4 4 0 0 0 2.8-2.8A41 41 0 0 0 24 12a41 41 0 0 0-.5-5.8zM9.75 15.5v-7l6 3.5-6 3.5z"/>
+    </svg>
+  </button>
+
+  <!-- Chats -->
+  <button onclick="location.href='chat.html'" class="btn ghost icon" title="Chats" aria-label="Chats">
+    <!-- ícono Chats (burbujas de mensaje) -->
+    <svg viewBox="0 0 24 24" aria-hidden="true">
+      <path d="M4 4h16a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H7l-4 4V6a2 2 0 0 1 2-2z"/>
+    </svg>
+  </button>
+
+  <!-- Cerrar sesión -->
+  <button id="btnLogout" class="btn ghost icon" title="Cerrar sesión" aria-label="Cerrar sesión">
+    <!-- ícono Logout -->
+    <svg viewBox="0 0 24 24" aria-hidden="true">
+      <path d="M10 4a1 1 0 0 0-1 1v3a1 1 0 1 0 2 0V6h6v12h-6v-2a1 1 0 1 0-2 0v3a1 1 0 0 0 1 1h8a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-8z"/>
+      <path d="M11.7 12.7a1 1 0 0 0 0-1.4l-3-3a1 1 0 1 0-1.4 1.4L8.6 11H3a1 1 0 1 0 0 2h5.6l-1.3 1.3a1 1 0 0 0 1.4 1.4l3-3z"/>
+    </svg>
+  </button>
+</div>
 </header>
 
 <div class="container stack">
@@ -596,7 +635,6 @@
 </script>
 </body>
 </html>
-
 
 
 
