--- a/chat.html
+++ b/chat.html
@@ -57,6 +57,11 @@ main.container{flex:1 1 auto;display:flex;flex-direction:column;overflow:hidden}
   padding:12px;
   overflow:hidden
 }
+.btn.icon{
+  display:flex; align-items:center; justify-content:center;
+  width:38px; height:38px; padding:0; border-radius:8px;
+}
+.btn.icon svg{ width:22px; height:22px; fill:currentColor }
 .card{
   background:var(--card);
   border:1px solid var(--border);
@@ -215,13 +220,39 @@ input[type="text"], textarea{
 <header>
   <h1><img id="logo" src="logo.jpg" alt="Logo"> Chat Privado</h1>
   <div class="logo">
-  <img src="hugw.svg" alt="Hug-oh Logo">
+  <img src="svg/hugw.svg" alt="Hug-oh Logo">
   </div>
-  <div style="display:flex;gap:8px">
-    <button onclick="location.href='https://www.youtube.com/@hablahistoria?sub_confirmation=1'" class="btn">Youtube</button>
-    <button id="btnIndex" class="btn ghost">Inicio</button>
-    <button id="btnLogout" class="btn ghost">Cerrar sesión</button>
-  </div>
+<div style="display:flex;gap:8px">
+  <!-- YouTube -->
+  <button
+    onclick="location.href='https://www.youtube.com/@hablahistoria?sub_confirmation=1'"
+    class="btn icon"
+    title="YouTube"
+    aria-label="YouTube"
+  >
+    <!-- ícono YouTube -->
+    <svg viewBox="0 0 24 24" aria-hidden="true">
+      <path d="M23.5 6.2a4 4 0 0 0-2.8-2.8C18.7 3 12 3 12 3s-6.7 0-8.7.4A4 4 0 0 0 .5 6.2 41 41 0 0 0 0 12a41 41 0 0 0 .5 5.8 4 4 0 0 0 2.8 2.8C5.3 21 12 21 12 21s6.7 0 8.7-.4a4 4 0 0 0 2.8-2.8A41 41 0 0 0 24 12a41 41 0 0 0-.5-5.8zM9.75 15.5v-7l6 3.5-6 3.5z"/>
+    </svg>
+  </button>
+
+  <!-- Inicio -->
+  <button id="btnIndex" class="btn ghost icon" title="Inicio" aria-label="Inicio">
+    <!-- ícono Home -->
+    <svg viewBox="0 0 24 24" aria-hidden="true">
+      <path d="M12 3.2 2.5 11a1 1 0 0 0 1.3 1.5L5 11.7V20a1 1 0 0 0 1 1h4v-6h4v6h4a1 1 0 0 0 1-1v-8.3l1.2 1a1 1 0 1 0 1.3-1.5L12 3.2z"/>
+    </svg>
+  </button>
+
+  <!-- Cerrar sesión -->
+  <button id="btnLogout" class="btn ghost icon" title="Cerrar sesión" aria-label="Cerrar sesión">
+    <!-- ícono Logout -->
+    <svg viewBox="0 0 24 24" aria-hidden="true">
+      <path d="M10 4a1 1 0 0 0-1 1v3a1 1 0 1 0 2 0V6h6v12h-6v-2a1 1 0 1 0-2 0v3a1 1 0 0 0 1 1h8a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-8z"/>
+      <path d="M11.7 12.7a1 1 0 0 0 0-1.4l-3-3a1 1 0 1 0-1.4 1.4L8.6 11H3a1 1 0 1 0 0 2h5.6l-1.3 1.3a1 1 0 0 0 1.4 1.4l3-3z"/>
+    </svg>
+  </button>
+</div>
 </header>
 
 <main class="container">
@@ -609,6 +640,5 @@ onAuthStateChanged(auth, async (user)=>{
 </script>
 </body>
 </html>
-
 
 
