--- a/chat.html
+++ b/chat.html
@@ -218,7 +218,7 @@ input[type="text"], textarea{
 </head>
 <body>
 <header>
-  <h1><img id="logo" src="logo.jpg" alt="Logo"> Chat Privado</h1>
+  <h1><img id="logo" src="logo.jpg" alt="Logo"> </h1>
   <div class="logo">
   <img src="svg/hugw.svg" alt="Hug-oh Logo">
   </div>
@@ -640,5 +640,6 @@ onAuthStateChanged(auth, async (user)=>{
 </script>
 </body>
 </html>
+
 
 
