--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 </head>
 <body>
 <header>
-  <h1> <img src="logo.jpg"> Habla Historia</h1>
+  <h1> <img src="logo.jpg"> </h1>
   <div class="logo">
   <img src="svg/m.svg" alt="Hug-oh Logo">
   </div>
@@ -635,6 +635,7 @@
 </script>
 </body>
 </html>
+
 
 
 
