--- a/login.html
+++ b/login.html
@@ -2,7 +2,6 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<meta name="google-adsense-account" content="ca-pub-9925435155682261">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Acceso • HablaHistoria</title>
 <link rel="icon" href="logo.jpg" type="image/x-icon">
@@ -83,7 +82,7 @@
 <body>
 
 <div class="logo">
-  <img src="hug.svg" alt="Hug-oh Logo">
+  <img src="svg/hug.svg" alt="Hug-oh Logo">
 </div>
 
 <div class="card">
@@ -258,4 +257,3 @@ document.getElementById('btnRegister').addEventListener('click', async ()=>{
 </script>
 </body>
 </html>
-
