--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 <header>
   <h1> <img src="logo.jpg"> </h1>
   <div class="logo">
-  <img src="svg/m.svg" alt="Hug-oh Logo">
+  <img src="svg/m.svg" alt="Hug-oh Logo" onclick="location.href='https://hug-oh.com/'">
   </div>
 <div style="display:flex;gap:8px">
   <!-- YouTube -->
@@ -635,6 +635,7 @@
 </script>
 </body>
 </html>
+
 
 
 
