--- a/login.html
+++ b/login.html
@@ -82,7 +82,7 @@
 <body>
 
 <div class="logo">
-  <img src="svg/hug.svg" alt="Hug-oh Logo">
+  <img src="svg/hug.svg" alt="Hug-oh Logo" onclick="location.href='https://hug-oh.com/'">
 </div>
 
 <div class="card">
@@ -257,3 +257,4 @@ document.getElementById('btnRegister').addEventListener('click', async ()=>{
 </script>
 </body>
 </html>
+
