--- a/chat.html
+++ b/chat.html
@@ -218,9 +218,9 @@ input[type="text"], textarea{
 </head>
 <body>
 <header>
-  <h1><img id="logo" src="logo.jpg" alt="Logo" onclick="location.href='https://hug-oh.com/'"> </h1>
+  <h1><img id="logo" src="logo.jpg" alt="Logo"> </h1>
   <div class="logo">
-  <img src="svg/hugw.svg" alt="Hug-oh Logo">
+  <img src="svg/hugw.svg" alt="Hug-oh Logo" onclick="location.href='https://hug-oh.com/'">
   </div>
 <div style="display:flex;gap:8px">
   <!-- YouTube -->
@@ -640,6 +640,7 @@ onAuthStateChanged(auth, async (user)=>{
 </script>
 </body>
 </html>
+
 
 
 
