--- a/chat.html
+++ b/chat.html
@@ -33,20 +33,33 @@ body{
   margin-right: 20px;
 }
 header {
-  display:flex; justify-content:space-between; align-items:center;
-  padding:14px 16px; background:#ff9f1c; color:#fff;
-  border-bottom:2px solid #e67e00; position:sticky; top:0; z-index:10
+  display: grid;
+  grid-template-columns: 1fr auto 1fr; /* tres columnas */
+  align-items: center;
+  padding: 14px 16px;
+  background: #ff9f1c;
+  color: #fff;
+  border-bottom: 2px solid #e67e00;
+  position: sticky;
+  top: 0;
+  z-index: 10;
 }
-header h1 { 
-  font-size:28px; margin:0; color:#fff; 
-  display:flex; align-items:center; gap:5px;
+
+header h1 {
+  margin: 0;
+  justify-self: start; /* izquierda */
 }
-header h1 img {
-  width:38px;
-  height:38px;
-  border-radius:50%;
-  object-fit:cover;
+
+header .logo {
+  justify-self: center; /* centro exacto */
 }
+
+header > div:last-child {
+  justify-self: end; /* derecha */
+  display: flex;
+  gap: 8px;
+}
+
 #logo{height:40px;width:auto;border-radius:100%}
 main.container{flex:1 1 auto;display:flex;flex-direction:column;overflow:hidden}
 .layout{
@@ -640,6 +653,7 @@ onAuthStateChanged(auth, async (user)=>{
 </script>
 </body>
 </html>
+
 
 
 
