--- a/index.html
+++ b/index.html
@@ -18,6 +18,29 @@
       --primary:#ff9f1c;
     }
     body { margin:0; font-family:system-ui,sans-serif; background:var(--bg); color:var(--text); }
+    .logo {
+    text-align:center;
+    }
+    .logo img {
+    width:40px;
+    height:auto;
+    opacity: 85%;
+    margin-left: 20px;
+    margin-right: 20px;
+    }
+.btn.icon, 
+.btn.ghost.icon {
+  border: none !important;     
+  background: transparent !important; /* sin fondo */
+  color: #fff !important;             /* fuerza blanco */
+  box-shadow: none !important;
+}
+
+.btn.icon svg {
+  width: 22px;
+  height: 22px;
+  fill: #fff !important; /* SVG blanco sólido */
+}
     header {
       display: grid;
       grid-template-columns: 1fr auto 1fr; /* tres columnas equilibradas */
@@ -42,35 +65,12 @@
       border-radius:50%;
       object-fit:cover;
     }
-
-    .logo {
-      justify-self: center; /* centro exacto */
-      text-align: center;
+    .btn {
+      background:var(--primary); color:#ffffff; border:none;
+      border-radius:10px; padding:10px 14px; font-weight:600; cursor:pointer
     }
-    .logo img {
-      width:40px;
-      height:auto;
-      opacity: 85%;
-      cursor:pointer;
-    }
-
-    header > div:last-child {
-      justify-self: end; /* derecha */
-      display:flex;
-      gap:8px;
-    }
-
-    .btn.icon, 
-    .btn.ghost.icon {
-      border: none !important;     
-      background: transparent !important; 
-      color: #fff !important;             
-      box-shadow: none !important;
-    }
-    .btn.icon svg {
-      width: 22px;
-      height: 22px;
-      fill: #fff !important;
+    .btn.ghost {
+      background:transparent; border:1px solid var(--border); color:#e67e00
     }
     .container { max-width:900px; max-height: 400px; margin:24px auto; padding:0 16px}
     .card { background:var(--card); border:1px solid var(--border); border-radius:16px; padding:16px }
@@ -644,6 +644,7 @@
 </script>
 </body>
 </html>
+
 
 
 
