--- a/index.html
+++ b/index.html
@@ -18,16 +18,6 @@
       --primary:#ff9f1c;
     }
     body { margin:0; font-family:system-ui,sans-serif; background:var(--bg); color:var(--text); }
-    .logo {
-    text-align:center;
-    }
-    .logo img {
-    width:40px;
-    height:auto;
-    opacity: 85%;
-    margin-left: 20px;
-    margin-right: 20px;
-    }
 .btn.icon, 
 .btn.ghost.icon {
   border: none !important;     
@@ -41,30 +31,50 @@
   height: 22px;
   fill: #fff !important; /* SVG blanco sólido */
 }
-    header {
-      display: grid;
-      grid-template-columns: 1fr auto 1fr; /* tres columnas equilibradas */
-      align-items: center;
-      padding:14px 16px;
-      background:#ff9f1c;
-      color:#fff;
-      border-bottom:2px solid #e67e00;
-      position:sticky;
-      top:0;
-      z-index:10;
-    }
-    header h1 { 
-      margin:0;
-      display:flex; 
-      align-items:center; 
-      justify-self: start; /* izquierda */
-    }
-    header h1 img {
-      width:38px;
-      height:38px;
-      border-radius:50%;
-      object-fit:cover;
-    }
+header {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr; /* tres columnas equilibradas */
+  align-items: center;
+  padding: 14px 16px;
+  background: #ff9f1c;
+  color: #fff;
+  border-bottom: 2px solid #e67e00;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+}
+
+header h1 { 
+  margin: 0;
+  display: flex; 
+  align-items: center; 
+  justify-self: start; /* izquierda */
+}
+
+header h1 img {
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.logo {
+  justify-self: center; /* centro exacto */
+  text-align: center;
+}
+.logo img {
+  width: 40px;
+  height: auto;
+  opacity: 85%;
+  cursor: pointer;
+}
+
+header > div:last-child {
+  justify-self: end; /* derecha */
+  display: flex;
+  gap: 8px;
+}
+
     .btn {
       background:var(--primary); color:#ffffff; border:none;
       border-radius:10px; padding:10px 14px; font-weight:600; cursor:pointer
@@ -644,6 +654,7 @@
 </script>
 </body>
 </html>
+
 
 
 
